; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-readahead.c_lwan_readahead_init.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-readahead.c_lwan_readahead_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@readahead_pipe_fd = common dso_local global i64* null, align 8
@.str = private unnamed_addr constant [43 x i8] c"Initializing low priority readahead thread\00", align 1
@O_CLOEXEC = common dso_local global i32 0, align 4
@PIPE_DIRECT_FLAG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"pipe2\00", align 1
@F_GETFL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [6 x i8] c"fcntl\00", align 1
@F_SETFL = common dso_local global i32 0, align 4
@O_NONBLOCK = common dso_local global i32 0, align 4
@readahead_self = common dso_local global i32 0, align 4
@lwan_readahead_loop = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [15 x i8] c"pthread_create\00", align 1
@SCHED_IDLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lwan_readahead_init() #0 {
  %1 = alloca i32, align 4
  %2 = load i64*, i64** @readahead_pipe_fd, align 8
  %3 = getelementptr inbounds i64, i64* %2, i64 0
  %4 = load i64, i64* %3, align 8
  %5 = load i64*, i64** @readahead_pipe_fd, align 8
  %6 = getelementptr inbounds i64, i64* %5, i64 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %4, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %0
  br label %48

10:                                               ; preds = %0
  %11 = call i32 @lwan_status_debug(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  %12 = load i64*, i64** @readahead_pipe_fd, align 8
  %13 = load i32, i32* @O_CLOEXEC, align 4
  %14 = load i32, i32* @PIPE_DIRECT_FLAG, align 4
  %15 = or i32 %13, %14
  %16 = call i64 @pipe2(i64* %12, i32 %15)
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %10
  %19 = call i32 @lwan_status_critical_perror(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  br label %20

20:                                               ; preds = %18, %10
  %21 = load i64*, i64** @readahead_pipe_fd, align 8
  %22 = getelementptr inbounds i64, i64* %21, i64 1
  %23 = load i64, i64* %22, align 8
  %24 = load i32, i32* @F_GETFL, align 4
  %25 = call i32 (i64, i32, ...) @fcntl(i64 %23, i32 %24)
  store i32 %25, i32* %1, align 4
  %26 = load i32, i32* %1, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %20
  %29 = call i32 @lwan_status_critical_perror(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  br label %30

30:                                               ; preds = %28, %20
  %31 = load i64*, i64** @readahead_pipe_fd, align 8
  %32 = getelementptr inbounds i64, i64* %31, i64 1
  %33 = load i64, i64* %32, align 8
  %34 = load i32, i32* @F_SETFL, align 4
  %35 = load i32, i32* %1, align 4
  %36 = load i32, i32* @O_NONBLOCK, align 4
  %37 = or i32 %35, %36
  %38 = call i32 (i64, i32, ...) @fcntl(i64 %33, i32 %34, i32 %37)
  %39 = icmp slt i32 %38, 0
  br i1 %39, label %40, label %42

40:                                               ; preds = %30
  %41 = call i32 @lwan_status_critical_perror(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  br label %42

42:                                               ; preds = %40, %30
  %43 = load i32, i32* @lwan_readahead_loop, align 4
  %44 = call i64 @pthread_create(i32* @readahead_self, i32* null, i32 %43, i32* null)
  %45 = icmp ne i64 %44, 0
  br i1 %45, label %46, label %48

46:                                               ; preds = %42
  %47 = call i32 @lwan_status_critical_perror(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0))
  br label %48

48:                                               ; preds = %9, %46, %42
  ret void
}

declare dso_local i32 @lwan_status_debug(i8*) #1

declare dso_local i64 @pipe2(i64*, i32) #1

declare dso_local i32 @lwan_status_critical_perror(i8*) #1

declare dso_local i32 @fcntl(i64, i32, ...) #1

declare !callback !2 dso_local i64 @pthread_create(i32*, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
